force-app/main/default/objects/OI_Graph_Node_Archive__b/fields/Archived_At__c.field-meta.xml
<CustomField>
    <fullName>Archived_At__c</fullName>
    <label>Archived At</label>
    <type>DateTime</type>
    <required>true</required>
</CustomField>