force-app/main/default/objects/OI_Graph_Node_Archive__b/fields/Attributes_Json__c.field-meta.xml
<CustomField>
    <fullName>Attributes_Json__c</fullName>
    <label>Attributes Json</label>
    <type>LongTextArea</type>
    <length>131072</length>
</CustomField>