force-app/main/default/objects/OI_Graph_Node_Archive__b/fields/Checksum__c.field-meta.xml
<CustomField>
    <fullName>Checksum__c</fullName>
    <label>Checksum</label>
    <type>Text</type>
    <length>64</length>
</CustomField>