force-app/main/default/objects/OI_Graph_Node_Archive__b/fields/Node_Type__c.field-meta.xml
<CustomField>
    <fullName>Node_Type__c</fullName>
    <label>Node Type</label>
    <type>Text</type>
    <length>80</length>
</CustomField>