force-app/main/default/objects/OI_Graph_Node_Archive__b/fields/Node_Version_Key__c.field-meta.xml
<CustomField>
    <fullName>Node_Version_Key__c</fullName>
    <label>Node Version Key</label>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
</CustomField>