force-app/main/default/objects/OI_Graph_Node_Archive__b/fields/Parent_Key__c.field-meta.xml
<CustomField>
    <fullName>Parent_Key__c</fullName>
    <label>Parent Key</label>
    <type>Text</type>
    <length>255</length>
</CustomField>