force-app/main/default/objects/OI_Graph_Node_Archive__b/fields/Secondary_Key__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Key__c</fullName>
    <label>Secondary Key</label>
    <type>Text</type>
    <length>255</length>
</CustomField>