force-app/main/default/objects/OI_Graph_Node_Archive__b/fields/Version_Number__c.field-meta.xml
<CustomField>
    <fullName>Version_Number__c</fullName>
    <label>Version Number</label>
    <type>Text</type>
    <length>10</length>
    <required>true</required>
    <description>Zero-padded for correct text-comparable index ordering.</description>
</CustomField>